[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mab-lite-dhruv"            # <-- your unique name
version = "0.1.0"
description = "Minimal multi-armed bandit helpers: pure exploration & pure exploitation."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Dhruv Pithadia" }]
keywords = ["bandit", "multi-armed-bandit", "reinforcement-learning", "exploration", "exploitation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/dhruvpithadia/mab-lite-dhruv"
Issues = "https://github.com/dhruvpithadia/mab-lite-dhruv/issues"